2002-01-19  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c: Added individual functions for CGI variable
	access.  Much simpler than trying to devise a data structure to
	pass them around with.

	* src/rivetCore.c (Rivet_LoadEnv): Roll back authorization
	information command.

2002-01-18  David N. Welton  <davidw@dedasys.com>

	* src/rivetCore.c (Rivet_LoadAuth): New command to load
	authorization information in its own array.

	* src/TclWebcgi.c: New file for stand-alone implementations of
	common web API.

	* src/TclWebapache.c: New file for apache-based implementations of
	web API.

	* src/TclWeb.c: Common code for TclWeb API.

	* src/TclWeb.h: TclWeb web interaction API.

2002-01-11  Damon J. Courtney <damon@unreality.com>

	* src/make.tcl
	    Updated some of the make nodes.

	    librivet.so now gets copied into the rivet package directory.


	* src/mod_rivet.c
	    Changed Rivet_Init to Rivet_InitCore to fix bug.

	    All Script directives now append to each other instead of
	    overwriting the last directive.  Directory directives still
	    override in standard fashion though.

	* rivet/packages/rivet
	    Added as the default package of Rivet commands in C.

2002-01-10  Damon J. Courtney <damon@unreality.com>
	* src/rivet.h
	    Added macro 'TCL_CMD_HEADER'.  Prints the default command header
	    for Tcl commands in Rivet.

	    Added macro 'TCL_OBJ_CMD'.  Prints the default object command
	    creation for Tcl commands in Rivet.

	* src/rivetInit.c
	    Renamed to rivetPkgInit.c

	* src/rivetCrypt.c
	    Added.  Contains commands for encryption and decryption.
		encrypt
		decrypt
		crypt

	* src/rivetWWW.c
	    Added.  Contains commands for the world wide web.
		escape_string
		unescape_string
		escape_sgml_chars
		escape_shell_command

	* src/rivetList.c
	    Added the following commands:
		comma_split
		comma_join
		lassign_array

	* src/make.tcl
	    Moved all of the Rivet Tcl commands into their own library